cmake_minimum_required(VERSION 3.13)
project(algorithmms)

set(CMAKE_CXX_STANDARD 14)
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
#add_executable(algorithmms main.cpp leetcode/string/SimplifyPath.h swordToOffer/RepeatNumber.h design_parttern/SingleSton.cpp design_parttern/SingleSton.h)
add_executable(algorithms main.cpp)
